--- a/.github/workflows/PublishMySite.yml
+++ b/.github/workflows/PublishMySite.yml
@@ -17,7 +17,20 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    permissions: read-all|write-all
+    permissions:
+      actions: write
+      checks: read
+      contents: write
+      deployments: write
+      id-token: read
+      issues: read
+      discussions: read
+      packages: read
+      pages: write
+      pull-requests: read
+      repository-projects: read
+      security-events: read
+      statuses: read
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
